[package]
name = "bitterlemon"
edition = "2018"
version = "0.2.4"
authors = ["Simon Harris <simon@pearfalse.com>"]
description = "An RLE-based encoder and decoder for bit streams."
license = "MIT"
repository = "https://github.com/pearfalse/bitterlemon"
categories = ["compression"]
keywords = ["rle", "bitstream", "pack"]

[dependencies]
arrayvec = ">= 0.7"

[dev-dependencies]
criterion = "0.3"
random = ">= 0.13"

[[bench]]
name = "test_encode_round_trip"
harness = false
