[workspace]
members = ["bl-bin"]

[package]
name = "bitterlemon"
edition = "2021"
version = "0.3.0-wip"
authors = ["Simon Harris <simon@pearfalse.com>"]
description = "An RLE-based encoder and decoder for bit streams."
license = "MIT"
repository = "https://github.com/pearfalse/bitterlemon"
categories = ["compression"]
keywords = ["rle", "bitstream", "pack"]

[profile.release]
codegen-units = 1
lto = true

[features]
# no_std = []

[dev-dependencies]
arrayvec = ">= 0.5"
criterion = "0.3"
random = ">= 0.12"
hex-slice = "0.1.4"

[[bench]]
name = "test_encode_round_trip"
harness = false
