[package]
name = "bitterlemon-cli"
edition = "2018"
version = "0.3.0"
authors = ["Simon Harris <simon@pearfalse.com>"]
description = "A command-line RLE-based encoder and decoder for bit streams."
license = "MIT"
repository = "https://github.com/pearfalse/bitterlemon"
categories = ["compression"]
keywords = ["rle", "bitstream", "pack"]

[dependencies]
bitterlemon = { path = "../" }
gumdrop = "0.8"

[dev-dependencies]
arrayvec = ">= 0.5"
